# t8code_project

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pull_request_template.md  t8project_main.cxx
src/: CMakeLists.txt  config.cmake.in  t8project_helloworld.cxx  t8project_helloworld.hxx  t8project_vtk_linkage.hxx.in
test/: CMakeLists.txt  t8project_gtest_example.cxx  t8project_gtest_main.cxx  t8project_gtest_vtk_linkage.cxx
